기능: 영화관 목록 페이지네이션 추가
